--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-# Auto detect text files and perform LF normalization
-* text=auto
-<h1>vans page</h1>
-<p>
-this is a test to see</p>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>This is van</h1>
+<p>blalbllalsl</p>
+
+</body>
+</html>
