--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>This is van</h1>
-<p>blalbllalsl</p>
+<h1>The Personal Computer</h1>
+<p>In 1946 The first ever computer was revealed to the public.</p>
 
 </body>
 </html>
