--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>The Personal Computer</h1>
 <p>In 1946 The first ever computer was revealed to the public.</p>
 <img src="https://bloximages.chicago2.vip.townnews.com/tucson.com/content/tncms/assets/v3/editorial/9/3e/93eb7683-ee08-58a2-beed-2b5cebd45675/5a7203351d893.image.jpg?resize=1200%2C918" weigth="150px" height="150px"
-
+<a href="https://bloximages.chicago2.vip.townnews.com/tucson.com/content/tncms/assets/v3/editorial/9/3e/93eb7683-ee08-58a2-beed-2b5cebd45675/5a7203351d893.image.jpg?resize=1200%2C918"
 
 
 </body>
