--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <table border="1">
     <tr>
-        <th>Sunday</th>
-        <th>Monday</th>
-        <th>Tuesday</th>
-        <th>Wednesday</th>
-        <th>thursday</th>
+        <th>Milestone</th>
+        <th>Milestone</th>
+        <th>Milestone</th>
+        <th>Milestone</th>
+        <th>Milestone</th>
         
     </tr>
     <tr>
