--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
     </tr>
     <tr>
-        <td>Filler</td>
+        <td>The first computer</td>
         <td>Filler</td>
         <td>Filler</td>
         <td>Filler</td>
