--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </tr>
     <tr>
         <td>The first computer</td>
-        <td>Filler</td>
-        <td>Filler</td>
-        <td>Filler</td>
-        <td>Filler</td>
+        <td>The first computer with integrated curcuits</td>
+        <td>The first computer with artificial intelligence</td>
+        <td>The first mass-marketed personal computer</td>
+        <td>The first proposal of the world wide web</td>
         
     </tr>
     <tr>
