--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <th>Milestone</th>
         <th>Milestone</th>
         <th>Milestone</th>
-        <th>Milestone.</th>
+        <th>Milestone</th>
         
     </tr>
     <tr>
