--- a/index.html
+++ b/index.html
@@ -2,21 +2,7 @@
 <html>
     <head>Milestones of the Personal Computer</head>
 
-<style>
-.class5{ color:chartreuse;}
-.class4{color:LightYellow}
-.class3{color:MediumPurple}
-.class2{color:Sienna}
-.class1{color:lightblue}
-.class5{background-color:blue;}
-h3 {color:aqua;}
 
-.li1{background-color:green;}
-.li2{background-color:blue;}
-.li3{background-color:blueviolet;}
-.li4{background-color:yellow;}
-.li5{background-color:pink;}
-</style>
 <body>
 <ul>
     <h1>The Personal Computer</h1>
@@ -48,11 +34,11 @@ h3 {color:aqua;}
 </ul>
 <table border="1">
     <tr>
-        <th>Milestone</th>
-        <th>Milestone</th>
-        <th>Milestone</th>
-        <th>Milestone</th>
-        <th>Milestone</th>
+        <th <a href="Thefirstcomputerwasrevealed.html">Milestone</a>>Milestone</th>
+        <th <a href="Integratedcurcuits.html">Milestone</a>>Milestone</th>
+        <th <a href="Artafitialinteeligence.html">Milestone</a>>Milestone</th>
+        <th <a href="Mass-marketed.html">Milestone</a>>Milestone</th>
+        <th <a href="modernpc.html">Milestone</a>>Milestone</th>
         
     </tr>
     <tr>
