--- a/Integratedcurcuits.html
+++ b/Integratedcurcuits.html
@@ -1,10 +1,15 @@
-<table border="1">
+
+<div><header><link rel="stylesheet" href="style.css">Integrated-Curcuits</header></div><table border="1">
     <tr>
-        <th <a href="Thefirst"></a>>Milestone</th>
-        <th>Milestone</th>
-        <th>Milestone</th>
-        <th>Milestone</th>
-        <th>Milestone</th>
+        <th> <a href="Thefirstcomputerwasrevealed.html">Milestone</a>
+        </th>
+        <th> <a href="Integratedcurcuits.html">Milestone</a>
+        </th>
+        <th> <a href="Artafitialinteeligence.html">Milestone</a>
+        </th>
+        <th> <a href="Mass-marketed.html">Milestone</a>
+        </th>
+        <th> <a href="modernpc.html">Milestone</a></th>
         
     </tr>
     <tr>
