--- a/Integratedcurcuits.html
+++ b/Integratedcurcuits.html
@@ -1,5 +1,9 @@
-
-<div><header><link rel="stylesheet" href="style.css">Integrated-Curcuits</header></div><table border="1">
+<!DOCTYPE html>
+<html>
+    <a href="https://www.timetoast.com/timelines/the-five-generations-of-computers-8d0c229b-edd8-413a-94ec-474d20cd8c9c"  class="middle"><img src="https://s3.amazonaws.com/s3.timetoast.com/public/uploads/photo/12516725/image/dad8a36eeb3a2742601018d800211eb7" width="200px" height="200px"></a></a>
+<div><header class="hover"><link rel="stylesheet" href="style.css">Integrated-Curcuits</header></div><table border="1">
+    
+    An integrated circuit is a small chip of a semiconductor material that contains electronic components and their interconnections123. It is also called a microchip or a chip12. An integrated circuit eliminates the need for several components such as transistors, resistors, diodes, capacitors, and wires by using silicon and soldering24. An integrated circuit is much smaller and faster than a standard circuit3.
     <tr>
         <th> <a href="Thefirstcomputerwasrevealed.html">Milestone</a>
         </th>
@@ -26,5 +30,5 @@
         <td>1970</td>
         <td>1984</td>
         <td>1989</td>
-        
     </tr>
+    </html>
