--- a/Mass-marketed.html
+++ b/Mass-marketed.html
@@ -1,5 +1,8 @@
-
-<div><header><link rel="stylesheet" href="style.css">MAss-Marketed</header></div><table border="1">
+<!DOCTYPE html>
+<html>
+    <a href="https://www.businessinsider.in/What-8-of-the-world's-most-popular-tech-gadgets-looked-like-when-they-were-first-released/Nintendo-Switch-the-companys-latest-stab-at-handheld-gaming-was-released-in-2017-/slideshow/67916055.cms"  class="middle"><img src="https://www.businessinsider.in/thumb/msid-67916064,width-640,resizemode-4,imgsize-303662/What-8-of-the-worlds-most-popular-tech-gadgets-looked-like-when-they-were-first-released/The-Apple-Macintosh-made-its-debut-in-1984-as-the-first-mass-market-personal-computer-.jpg" width="250px" height="200px"></a></a>
+<div><header class="hover"><link rel="stylesheet" href="style.css">MAss-Marketed</header></div><table border="1">
+    Over the next seven years, the phrase had gained enough recognition that Byte magazine referred to its readers in its first edition as "[in] the personal computing field",[5] and Creative Computing defined the personal computer as a "non-(time)shared system containing sufficient processing power and storage capabilities to satisfy the needs of an individual user."[6] In 1977, three new pre-assembled small computers hit the markets which Byte would refer to as the "1977 Trinity" of personal computing.
     <tr>
         <th> <a href="Thefirstcomputerwasrevealed.html">Milestone</a>
         </th>
@@ -27,4 +30,4 @@
         <td>1984</td>
         <td>1989</td>
         
-    </tr>
+    </tr> </html>
